File I/O, all requirements met.

--- a/Project_1/makefile
+++ b/Project_1/makefile
@@ -11,7 +11,7 @@ TARGET = reverse
 
 all: $(TARGET)
 
-$(TARGET): $(TARGET).c
+$(TARGET): $(TARGET).c $(TARGET).h
 	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
 
 clean:
